--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-markdown": "^9.0.3",
+    "react-qr-code": "^2.0.18",
     "react-spinners": "^0.15.0",
     "recharts": "^2.15.0",
     "sonner": "^1.7.1",
